@@ -1,4 +1,8 @@
           CHANGES IN SOUNDGEN VERSION 1.3.2 [...Date...]
+MINOR:
+  * soundgen(): fixed a bug that prevented proper control of pitch drift with pitchDriftDep
+  * analyze(): pitch candidates based on lowest dominant frequency band ("dom") respect pitchCeiling
+  * analyze(): fixed a bug with plotting symbols for pitch candidates in plot legend
 
 
           CHANGES IN SOUNDGEN VERSION 1.3.1 [04-October-2018]
